# agent-vi

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODO.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  debug_hyundai_annual.py  debug_parsing.py  diagnose_capex.py  fix_financial_companies.py  force_update_all.py  pyproject.toml  test_financial_service.py
backend/alembic/: env.py
backend/alembic/versions/: 041a1e737d98_add_bs_cf_columns.py  2f57f7625d3f_add_report_type_to_financial_unique_.py  447f373a6d46_add_watchlists_table.py  723fcb1a61e6_initial_schema.py  a484184bbe77_add_per_pbr_columns.py
backend/app/: auth.py  config.py  main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/financial/: agent.py  prompts.py
backend/app/agents/information/: agent.py  prompts.py
backend/app/agents/report/: agent.py  prompts.py
backend/app/agents/valuation/: agent.py  prompts.py
backend/app/api/: router.py
backend/app/data_sources/: __init__.py  dart_client.py  dart_web_scraper.py  naver_client.py  public_data_client.py  stock_client.py
backend/app/db/: session.py
backend/app/llm/: provider.py
backend/app/scheduler/: manager.py  run.py
backend/app/schemas/: __init__.py  analysis.py  common.py  company.py  report.py
backend/app/services/: analysis_service.py  financial_service.py
backend/scripts/: batch_update_per_pbr.py  migrate_cashflow_to_standalone.py  verify_q4_data.py
backend/tests/: test_dart_client.py  test_llm_provider.py  test_naver_client.py  test_pipeline_e2e.py  test_stock_client.py
(+65 files in other folders)
